# apertium-ht-en

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  apertium-ht-en.en.dix  apertium-ht-en.en.tsx  apertium-ht-en.ht-en.dix  apertium-ht-en.ht-en.t1x  apertium-ht-en.ht-en.t2x  apertium-ht-en.ht-en.t3x  apertium-ht-en.ht.acx  apertium-ht-en.ht.dix  apertium-ht-en.ht.tsx  apertium-ht-en.post-en.dix  configure.ac  ht-en-unsupervised.make  ht-en.prob  marker_words.ht  modes.xml  pending-tests.sh
dev/: calc-coverage.sh
test/: ht-en-pending-chunker-expected.txt  ht-en-pending-generator-expected.txt  ht-en-pending-input.txt  ht-en-pending-interchunk-expected.txt  ht-en-pending-morph-expected.txt  ht-en-pending-postchunk-expected.txt  ht-en-pending-postgen-expected.txt  ht-en-pending-postgen-gold.txt  ht-en-pending-pretransfer-expected.txt  tests.json
